# codespacerepo

./: .gitignore
.devcontainer/: devcontainer.json  setup.sh
generalworks/: pyproject.toml
newsclassification/: deeplearning_news.ipynb  main.py  pyproject.toml  vectorstores.ipynb
newsclassification/data/: Test.csv  Train.csv  test_clean.csv  test_raw.csv  train_raw.csv  training_prep.csv  vector_store_search_results.csv
newsclassification/faiss_gemini_model_multi/: index.faiss  index.pkl
