[project]
package-mode= false
name = "dsenv"
version = "0.1.0"
description = "Packages for Data Science in KNIME"
authors = [
    {name = "Nilotpal Choudhury"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "py4j (>=0.10.9.9,<0.11.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "importlib (>=1.0.4,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "duckdb (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
