[project]
name = "newsclassification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "faiss-cpu>=1.13.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.3",
    "langchain-google-genai>=4.1.2",
    "pandas>=2.3.3",
]
